# static_containers

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePrests.json  LICENSE  LICENSE.md
.github/workflows/: macosx.yml  push-pull_request.yml  ubuntu.yml  windows.yml
benchmarks/: CMakeLists.txt
cmake/: ztd.fixed_container-config.cmake.in  ztd.fixed_vector-config.cmake.in  ztd.inline_containers-config.cmake.in  ztd.static_containers-config.cmake.in
examples/: CMakeLists.txt
include/phd/fixed_vector/: fixed_vector.hpp
include/phd/fixed_vector/detail/: type_traits.hpp  uninit.hpp  wrap_pointer.hpp
include/ztd/: fixed_container.hpp  fixed_vector.hpp  inline_containers.hpp  static_containers.hpp
include/ztd/fixed_container/: fixed_basic_string.hpp  fixed_string.hpp  fixed_vector.hpp  forward.hpp  is.hpp  version.hpp
include/ztd/fixed_container/detail/: storage.hpp  uninit.hpp  wrap_pointer.hpp
include/ztd/fixed_vector/: fixed_vector.hpp  forward.hpp  version.hpp
include/ztd/fixed_vector/detail/: memory.hpp  type_traits.hpp  uninit.hpp  wrap_pointer.hpp
include/ztd/inline_containers/: forward.hpp  inline_basic_string.hpp  inline_string.hpp  inline_vector.hpp  is.hpp  version.hpp
include/ztd/inline_containers/detail/: storage.hpp
include/ztd/static_containers/: forward.hpp  is.hpp  static_basic_string.hpp  static_string.hpp  static_vector.hpp  version.hpp
include/ztd/static_containers/detail/: storage.hpp
tests/: CMakeLists.txt
tests/basic/: CMakeLists.txt
tests/basic/source/: compile_time.size_tests.cpp  compile_time_size_tests.cpp  insert.cpp  main.cpp  push_back.cpp  push_front.cpp  run_time..empty.cpp
tests/basic/source/fixed_string/: compile_time.size_tests.cpp  run_time.empty.cpp
tests/basic/source/fixed_vector/: compile_time.size_tests.cpp  run_time..empty.cpp
tests/basic/source/inline_string/: compile_time.size_tests.cpp  run_time.empty.cpp
tests/basic/source/inline_vector/: compile_time.size_tests.cpp  run_time.empty.cpp
tests/basic/source/static_string/: compile_time.size_tests.cpp  run_time.empty.cpp
tests/basic/source/static_vector/: compile_time.size_tests.cpp  run_time..empty.cpp
tests/inclusion/: CMakeLists.txt
tests/inclusion/source/: main.cpp
tests/inclusion/source/ztd/: fixed_container.cpp  fixed_vector.cpp  static_containers.cpp
tests/inclusion/source/ztd/fixed_container/: fixed_basic_string.cpp  fixed_string.cpp  fixed_vector.cpp
tests/inclusion/source/ztd/fixed_container/detail/: storage.cpp  uninit.cpp  wrap_pointer.cpp
tests/inclusion/source/ztd/fixed_vector/: fixed_vector.cpp
tests/inclusion/source/ztd/fixed_vector/detail/: memory.cpp  type_traits.cpp  uninit.cpp  wrap_pointer.cpp
tests/inclusion/source/ztd/static_containers/: static_basic_string.cpp  static_string.cpp  static_vector.cpp
tests/inclusion/source/ztd/static_containers/detail/: storage.cpp
